--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,12 +2,13 @@
 body {
   font-family: Arial, sans-serif; /* Set font family for the entire page */
   margin: 0; /* Remove default margin */
+  line-height: 1.5;
 }
 
  /* Styles for the header section */
 header {
-  background-color: #333; 
-  color: #fff; 
+  background-color: orange; 
+  color: black; 
   display: flex; 
   justify-content: space-between; 
   align-items: center; 
@@ -20,7 +21,7 @@ nav {
   gap: 20px;
 }
 nav a {
-  color: #fff;
+  color: black;
   text-decoration: none;
   font-weight: bold;
 }
